fix: input would not resize on mobile

--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -20,7 +20,7 @@
 
   form {
     input[type="text"] {
-      @apply flex-grow rounded-l-2xl border border-gray-400 py-1.5 px-3;
+      @apply flex-grow rounded-l-2xl border border-gray-400 py-1.5 px-3 min-w-3;
       @apply border-r-0 transition-colors duration-200 focus:border-gray-500;
     }
 
